tests/snapshots/scenarios/002_quantum_fusion_contexts-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "quantum_fusion",
  "files": [
    "contexts.json"
  ],
  "scenario_id": "002_quantum_fusion_contexts",
  "status": "validated"
}
