tests/snapshots/scenarios/008_search_core_direct_id-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "008_search_core_direct_id",
  "status": "validated"
}
