tests/snapshots/scenarios/009_search_core_direct_id_payload-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "009_search_core_direct_id_payload",
  "status": "validated"
}
