tests/snapshots/scenarios/010_search_core_fts_boost-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "010_search_core_fts_boost",
  "status": "validated"
}
