tests/snapshots/scenarios/011_search_core_limit-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "011_search_core_limit",
  "status": "validated"
}
