tests/snapshots/scenarios/012_search_core_payload_counts-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "012_search_core_payload_counts",
  "status": "validated"
}
